--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>மஞ்சள் நீராட்டு விழா | Puberty Function Invitation</title>
+  <title>பூப்புனித நீராட்டு விழா| Puberty Function Invitation</title>
 
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -35,7 +35,7 @@
   <section class="hero text-center d-flex flex-column justify-content-center align-items-center">
     <div class="container" data-aos="fade-up">
       <h2>அருளாளனாகிய இறைவனின் அருளால்</h2>
-      <h1 class="display-4 title">மஞ்சள் நீராட்டு விழா</h1>
+      <h1 class="display-4 title">பூப்புனித நீராட்டு விழா</h1>
       <h3>எங்கள் அன்பு மகள்</h3>
       <h2 class="name">ஹரிணி கே.டி</h2>
     </div>
