--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>பூப்புனித நீராட்டு விழா| Puberty Function Invitation</title>
+  <title>பூப்புனித நீராட்டு விழா </title>
 
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -19,14 +19,11 @@
 </head>
 <body>
 
-  <!-- 🌸 Background Music Placeholder -->
-  <!-- Replace 'music.mp3' with your Tamil traditional instrumental or soft veena/flute music -->
-  <audio id="bg-music" autoplay loop>
+  <!-- 🌸 Background Music -->
+  <audio id="bg-music" loop>
     <source src="music.mp3" type="audio/mpeg">
   </audio>
-  <button id="music-btn" class="music-btn">
-  🔊 Play Music
-</button>
+  <button id="music-btn" class="music-btn">🔊 Play Music</button>
 
   <!-- 🌸 Floating Background -->
   <canvas id="flowers"></canvas>
@@ -34,60 +31,108 @@
   <!-- 🌼 Hero Section -->
   <section class="hero text-center d-flex flex-column justify-content-center align-items-center">
     <div class="container" data-aos="fade-up">
-      <h2>அருளாளனாகிய இறைவனின் அருளால்</h2>
-      <h1 class="display-4 title">பூப்புனித நீராட்டு விழா</h1>
-      <h3>எங்கள் அன்பு மகள்</h3>
-      <h2 class="name">ஹரிணி கே.டி</h2>
+      
+      <!-- Top Floral Divider -->
+      <div class="floral-divider-top mb-3">
+        🌸🌺🌸🌼🌸🌺🌸
+      </div>
+
+      <!-- Title & Name -->
+      <h1 class="display-4 title mb-3">💐💐பூப்புனித நீராட்டு விழா💐💐</h1>
+      <h3 class="subheading">💐💐எங்கள் அன்பு மகள்💐💐</h3>
+      <h2 class="name mb-2">💐💐K.D.ஹரிணி💐💐</h2>
+
+      <!-- Bottom Floral Divider -->
+      <div class="floral-divider-bottom mt-3">
+        🌺🌸🌼🌺🌸🌼🌺
+      </div>
     </div>
   </section>
 
   <!-- 🌺 Photo Section -->
-  <section class="photo-section py-5" data-aos="zoom-in">
-    <div class="container text-center">
-      <div class="photo-frame mx-auto">
-        <img src="har1.jpg" alt="மகள் புகைப்படம்" class="img-fluid rounded-circle shadow-lg">
-      </div>
-      <p class="caption mt-3">பெண்மையின் இனிய பயணத்தின் தொடக்கம் 🌸<br>Beginning of her beautiful journey into womanhood 🌼</p>
-    </div>
-  </section>
+<section class="photo-section py-3" data-aos="zoom-in">
+  <div class="container text-center">
+    <!-- Background Blur Overlay -->
+    <div id="photo-overlay"></div>
 
+    <div class="photo-frame mx-auto">
+      <img id="photo" src="har1.jpg" alt="மகள் புகைப்படம்" class="img-fluid rounded-circle shadow-lg zoom-photo">
+    </div>
+  </div>
+</section>
+
+
+  <!-- 💛 Message Section -->
   <!-- 💛 Message Section -->
   <section class="message-section py-5" data-aos="fade-up">
     <div class="container">
-      <div class="row justify-content-center text-center">
-        <div class="col-md-10 col-lg-8 golden-frame p-4">
-          <p class="lead mb-3">
-            எங்கள் மகள் பெண்மையின் முதல் படி எடுத்து வைக்கும் இவ்விழாவில்,  
-            தங்கள் வருகையால் ஆசீர்வதிக்குமாறு அன்புடன் கேட்டுக்கொள்கிறோம்.
-          </p>
-          <p class="lead">
-            We cordially invite you to bless our daughter  
-            as she steps into a new chapter of her life.
-          </p>
+      <div class="row justify-content-center">
+        <div class="col-md-10 col-lg-8">
+          <div class="golden-frame p-4 p-md-5 text-center shadow-lg">
+            <h3 class="mb-4 text-warning fw-bold">அழைப்பிதழ் | Invitation Message</h3>
+            <p class="lead mb-0 text-dark tamil-text">
+              பூப்புனித நீராட்டு விழா பெரியோர்களால் நிச்சயிக்கப்பெற்று மேற்படி வைபவம்
+              <b>மதுரை - 5 சிவப்பிரியா இல்லம், 95, பகத்சிங் காலனி, கைத்தறி நகர், நிலையூர்</b> இல் நடைபெறுவதால்,
+              தாங்கள் தங்கள் சுற்றமும் நட்பும் சூழ வருகைதந்து
+              எங்களது செல்வியை வாழ்த்தி ஆசீர்வதிக்கும்படி அன்புடன் அழைக்கின்றோம்.
+            </p>
+          </div>
         </div>
       </div>
     </div>
   </section>
+
 
   <!-- 🌻 Event Details -->
   <section class="details-section py-5" data-aos="fade-up">
     <div class="container text-center">
       <div class="details-box golden-frame p-4 mx-auto shadow-lg">
         <h3 class="mb-4 text-warning">விழா விவரங்கள் | Event Details</h3>
-        <p>📅 <b>நாள் :</b> 9 நவம்பர் 2025 (ஞாயிற்றுக்கிழமை) </p>
-        <p>⏰ <b>நேரம் :</b> காலை 9:00 மணி முதல் 10:30 மணி வரை </p>
-        <p>📍 <b>இடம் :</b> நிலையூர், கைத்தரிநகர், மதுரை </p>
+        <p>📅 <b>நாள் :</b> 9 நவம்பர் 2025 (ஞாயிற்றுக்கிழமை)</p>
+        <p>⏰ <b>நேரம் :</b> காலை 10:30 மணி முதல் 12:00 மணி வரை</p>
+        <p>📍 <b>இடம் :</b> கைத்தறிநகர் (சிவப்பிரியா இல்லம்)</p>
       </div>
     </div>
   </section>
+
+  
+ <!-- 📍 Google Map Section -->
+<section class="map-section py-4" data-aos="fade-up">
+  <div class="container text-center">
+    <h4 class="text-warning mb-3">இடம் காண்க | View Location</h4>
+    <div class="map-frame mx-auto">
+
+      <!-- 🌍 Embedded Google Map -->
+       <iframe
+        src="https://www.google.com/maps?q=Sivapriya+Marriage+Hall,+95+Bhagath+Singh+Colony,+Kaithari+Nagar,+Nilaiyur,+Tamil+Nadu+625005&z=17&output=embed"
+        width="100%" height="320"
+        style="border:5px solid #ffcc00; border-radius:15px;"
+        allowfullscreen="" loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"
+        aria-label="Sivapriya Marriage Hall, Nilaiyur">
+      </iframe>
+
+      <!-- 🌸 Open in Google Maps Button -->
+      <p class="mt-3">
+        <a href="https://www.google.com/maps?q=Sivapriya+Marriage+Hall,+95+Bhagath+Singh+Colony,+Kaithari+Nagar,+Nilaiyur,+Tamil+Nadu+625005"
+           target="_blank"
+           class="btn btn-warning text-dark mt-2 shadow-sm fw-bold">
+          📍 Open in Google Maps
+        </a>
+      </p>
+    </div>
+  </div>
+</section>
+
+
+
 
   <!-- 💐 Closing -->
   <section class="closing-section py-5" data-aos="fade-up">
     <div class="container text-center">
       <div class="golden-frame p-4">
-        <p>உங்கள் வருகை எங்கள் மகளின் இவ்விழாவை மேலும் சிறப்பாக்கும் 💖</p>
-        <p>Your gracious presence will make the occasion even more memorable 💛</p>
-        <p class="mt-3">– அன்புடன்: குடும்பத்தினர் –<br>– With love, Family –</p>
+        <p>உங்கள் வருகை எங்கள் மகளின் இவ்விழாவை மேலும் சிறப்பிக்கட்டும் 💖</p>
+        <p class="mt-3"> அன்புடன்: குடும்பத்தினர் </p>
       </div>
     </div>
   </section>
@@ -97,10 +142,7 @@
   <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
   <script src="script.js"></script>
   <script>
-    AOS.init({
-      duration: 1000,
-      once: true
-    });
+    AOS.init({ duration: 1000, once: true });
   </script>
 </body>
 </html>
