--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   <section class="details-section py-5" data-aos="fade-up">
     <div class="container text-center">
       <div class="details-box golden-frame p-4 mx-auto shadow-lg">
-        <h3 class="mb-4 text-warning">விழா விவரங்கள் | Event Details</h3>
+        <h3 class="mb-4 text-warning">விழா விவரங்கள் </h3>
         <p>📅 <b>நாள் :</b> 9 நவம்பர் 2025 (ஞாயிற்றுக்கிழமை)</p>
         <p>⏰ <b>நேரம் :</b> காலை 10:30 மணி முதல் 12:00 மணி வரை</p>
         <p>📍 <b>இடம் :</b> கைத்தறிநகர் (சிவப்பிரியா இல்லம்)</p>
@@ -99,7 +99,7 @@
  <!-- 📍 Google Map Section -->
 <section class="map-section py-4" data-aos="fade-up">
   <div class="container text-center">
-    <h4 class="text-warning mb-3">இடம் காண்க | View Location</h4>
+    <h4 class="text-warning mb-3">இடம் க</h4>
     <div class="map-frame mx-auto">
 
       <!-- 🌍 Embedded Google Map -->
